# Optimium

./: README.md
application/Hand_Landmarks_Detection/: CMakeLists.txt  Defs.h  InferEngine.h  ModelRunner.cpp  ModelRunner.h  Optimium.cpp  Postprocess.cpp  Postprocess.h  README.md  Recorder.cpp  Recorder.h  TFLite.cpp  build.sh  download-third-party.sh  hand_landmark_lite.model  main.cpp  nms.cpp  nms.h  palm_detection_lite.model
install/optimium-runtime/python/: optimium_runtime-0.3.10-cp310-cp310-linux_aarch64.whl  optimium_runtime-0.3.10-cp310-cp310-linux_arm.whl  optimium_runtime-0.3.10-cp310-cp310-linux_x86_64.whl  optimium_runtime-0.3.10-cp311-cp311-linux_aarch64.whl  optimium_runtime-0.3.10-cp311-cp311-linux_arm.whl  optimium_runtime-0.3.10-cp311-cp311-linux_x86_64.whl  optimium_runtime-0.3.10-cp312-cp312-linux_aarch64.whl  optimium_runtime-0.3.10-cp312-cp312-linux_arm.whl  optimium_runtime-0.3.10-cp312-cp312-linux_x86_64.whl  optimium_runtime-0.3.10-cp36-cp36m-linux_aarch64.whl  optimium_runtime-0.3.10-cp36-cp36m-linux_arm.whl  optimium_runtime-0.3.10-cp36-cp36m-linux_x86_64.whl  optimium_runtime-0.3.10-cp37-cp37m-linux_aarch64.whl  optimium_runtime-0.3.10-cp37-cp37m-linux_arm.whl  (+13 more)
models/mediapipe_thread_1/: face_detection_full.model  face_detection_short.model  face_landmark.model  hand_landmark_lite.model  iris_landmark.model  palm_detection_full.model  palm_detection_lite.model
models/mediapipe_thread_2/: face_detection_full.model  face_detection_short.model  face_landmark.model  iris_landmark.model  palm_detection_full.model
